# project1

./: .env.example  .gitignore  Arb_Bot_Master_Spec_v2_copy.docx  README.md  pyproject.toml
src/arbitrage_bot/: __init__.py  cli.py  config.py  demo_data.py  fees.py  matching.py  models.py  repository.py  scanner.py  streamlit_app.py
src/arbitrage_bot/clients/: __init__.py  kalshi.py  polymarket.py
src/arbitrage_bot/tui/: __init__.py  app.py
tests/: test_matching.py
